Fix visibility issue

--- a/resources/gmail.css
+++ b/resources/gmail.css
@@ -47,6 +47,7 @@ button {
 
 img {
 	position: relative;
+	visibility: visible;
 	display: none;
 	height: 100%;
 	float: right;
